<?xml version="1.0"?>
<package format="2">
  <name>kubot_control</name>
  <version>0.0.8</version>
  <description>
  The kubot_control package
  </description>

  <author>KUBOT</author>
  <!-- KUBOT ROS  -->
  <maintainer email="t105408001@ntut.org.tw">Yun-Hong</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>