<?xml version="1.0"?>
<package format="2">
  <name>kubot_slam_3d</name>
  <version>0.0.1</version>
  <description>
  Kubot 3D SLAM package 
  </description>
  
  <author>KUBOT</author>
  <!-- KUBOT ROS  -->
  <maintainer email="t105408001@ntut.org.tw">Yun-Hong</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
